# QBot

./: .gitignore  .sourcery.yaml  .sourcery.yml  LICENSE  config.yaml  main.py  pyproject.toml  run.sh
.github/workflows/: black-format.yml  codeql.yml
modules/: AutoAuth.py  Config.py  HttpSender.py  Logger.py  Types.py  Urls.py
plugin/: GlmAi.py  Holiday.py  PluginBase.py  TestAutoReply.py  TestPlugin.py  Weather.py  __init__.py
plugin/GlmAi_d/: .gitignore  Config.py  History.py  Paths.py  RequApi.py  Sql.py  Types.py  config.yaml
plugin/GlmAi_d/data/personality/: xy.md
plugin/GlmAi_d/sql/: init.sql
plugin/GlmAi_d/sql/message/: add.sql  clear.sql  get.sql
plugin/GlmAi_d/sql/user/: add.sql  check.sql  del.sql
plugin/Holiday_d/: .gitignore  RequApi.py  SqlCache.py  test.http
plugin/Weather_d/: GetWeather.py  SqlCache.py  config.yaml  test.http
test/: ai.json  aiChat.py  message.json  passCallback.py  recieveHttp.py  test.http  testSqlmodel.py
