[project]
name = "QBot"
version = "0.1.0"
description = "QQBot"
readme = "README.md"
authors = [
    { name = "dudu", email = "dudu7615@qq.com" },
]
requires-python = ">=3.13"
dependencies = [
    "cryptography>=46.0.3",
    "fastapi>=0.119.0",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "peewee>=3.18.3",
    "pyyaml>=6.0.3",
    "uvicorn>=0.38.0",
]
